chat mobile screen overflow issue solved (vdh used)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  height: -webkit-fill-available;
+.chat {
+  height: 100dvh;
 }
 
 ::-webkit-scrollbar {
